# server/src/swagger_output.json
@@ -5,10 +5,9 @@
     "description": "공모아 서버 API관련 문서입니다.",
     "version": "1.0.0"
   },
-  "host": "localhost:8080",
+  "host": "https://gongmoa.site/api",
   "basePath": "/",
   "schemes": [
-    "http",
     "https"
   ],
   "consumes": [
@@ -65,7 +64,7 @@
         "tags": [
           "관리자/Menu"
         ],
-        "summary": "관리자 메뉴 수정 - 리스트 불러오기 로직",
+        "summary": "관리자 메뉴 관리 - 리스트 불러오기 로직",
         "description": "",
         "parameters": [
           {
@@ -96,9 +95,14 @@
         "tags": [
           "관리자/Menu"
         ],
-        "summary": "관리자 메뉴 수정 - 상태변경 로직",
+        "summary": "관리자 메뉴 관리 - 상태변경 로직",
         "description": "",
         "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -118,6 +122,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -127,7 +134,7 @@
         "tags": [
           "관리자/Menu"
         ],
-        "summary": "관리자 메뉴 수정 - 부모코드 조회 로직",
+        "summary": "관리자 메뉴 관리 - 부모코드 조회 로직",
         "description": "",
         "parameters": [
           {
@@ -148,7 +155,7 @@
         "tags": [
           "관리자/Menu"
         ],
-        "summary": "관리자 메뉴 수정 - 상세 조회 로직",
+        "summary": "관리자 메뉴 관리 - 상세 조회 로직",
         "description": "",
         "parameters": [
           {
@@ -169,9 +176,14 @@
         "tags": [
           "관리자/Menu"
         ],
-        "summary": "관리자 메뉴 수정 - 메뉴 수정 로직",
+        "summary": "관리자 메뉴 관리 - 메뉴 수정 로직",
         "description": "",
         "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -200,6 +212,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -209,9 +224,14 @@
         "tags": [
           "관리자/Menu"
         ],
-        "summary": "관리자 메뉴 수정 - 메뉴 순서변경 로직",
+        "summary": "관리자 메뉴 관리 - 메뉴 순서변경 로직",
         "description": "",
         "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -228,6 +248,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -377,7 +400,7 @@
         "tags": [
           "관리자/Menu"
         ],
-        "summary": "관리자 메뉴 수정 - 리스트 불러오기 로직",
+        "summary": "관리자 메뉴 관리 - 리스트 불러오기 로직",
         "description": "",
         "parameters": [
           {
@@ -408,9 +431,14 @@
         "tags": [
           "관리자/Menu"
         ],
-        "summary": "관리자 메뉴 수정 - 상태변경 로직",
+        "summary": "관리자 메뉴 관리 - 상태변경 로직",
         "description": "",
         "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -430,6 +458,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -439,7 +470,7 @@
         "tags": [
           "관리자/Menu"
         ],
-        "summary": "관리자 메뉴 수정 - 부모코드 조회 로직",
+        "summary": "관리자 메뉴 관리 - 부모코드 조회 로직",
         "description": "",
         "parameters": [
           {
@@ -460,7 +491,7 @@
         "tags": [
           "관리자/Menu"
         ],
-        "summary": "관리자 메뉴 수정 - 상세 조회 로직",
+        "summary": "관리자 메뉴 관리 - 상세 조회 로직",
         "description": "",
         "parameters": [
           {
@@ -481,9 +512,14 @@
         "tags": [
           "관리자/Menu"
         ],
-        "summary": "관리자 메뉴 수정 - 메뉴 수정 로직",
+        "summary": "관리자 메뉴 관리 - 메뉴 수정 로직",
         "description": "",
         "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -512,6 +548,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -521,9 +560,14 @@
         "tags": [
           "관리자/Menu"
         ],
-        "summary": "관리자 메뉴 수정 - 메뉴 순서변경 로직",
+        "summary": "관리자 메뉴 관리 - 메뉴 순서변경 로직",
         "description": "",
         "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -540,6 +584,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -598,6 +645,11 @@
         "description": "",
         "parameters": [
           {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
             "name": "body",
             "in": "body",
             "schema": {
@@ -616,6 +668,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -671,6 +726,11 @@
         "description": "",
         "parameters": [
           {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
             "name": "body",
             "in": "body",
             "schema": {
@@ -698,6 +758,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -710,6 +773,11 @@
         "summary": "사용자 메뉴 관리 - 순서변경 로직",
         "description": "",
         "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -726,12 +794,19 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
     },
     "/ipo/ipoList": {
       "get": {
+        "tags": [
+          "관리자/Stocks"
+        ],
+        "summary": "공모주 관리 - 공모주 불러오기",
         "description": "",
         "parameters": [
           {
@@ -779,8 +854,17 @@
     },
     "/ipo/setIpoStatus": {
       "post": {
+        "tags": [
+          "관리자/Stocks"
+        ],
+        "summary": "공모주 관리 - 공모주 상태변경",
         "description": "",
         "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -803,12 +887,19 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
     },
     "/ipo/getIpoDetail": {
       "get": {
+        "tags": [
+          "관리자/Stocks"
+        ],
+        "summary": "공모주 관리 - 공모주 상세 불러오기",
         "description": "",
         "parameters": [
           {
@@ -826,8 +917,17 @@
     },
     "/ipo/modifyIpoDetail": {
       "post": {
+        "tags": [
+          "관리자/Stocks"
+        ],
+        "summary": "공모주 관리 - 공모주 상세 수정하기",
         "description": "",
         "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -928,14 +1028,26 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
     },
     "/ipo/loadIpo": {
       "post": {
+        "tags": [
+          "관리자/Stocks"
+        ],
+        "summary": "공모주 불러오기 - 공모주 업데이트 관련 로직",
         "description": "",
         "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -955,6 +1067,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -999,6 +1114,11 @@
         "description": "",
         "parameters": [
           {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
             "name": "body",
             "in": "body",
             "schema": {
@@ -1020,6 +1140,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -1054,6 +1177,11 @@
         "description": "",
         "parameters": [
           {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
             "name": "body",
             "in": "body",
             "schema": {
@@ -1072,12 +1200,19 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
     },
     "/ipoList": {
       "get": {
+        "tags": [
+          "관리자/Stocks"
+        ],
+        "summary": "공모주 관리 - 공모주 불러오기",
         "description": "",
         "parameters": [
           {
@@ -1125,8 +1260,17 @@
     },
     "/setIpoStatus": {
       "post": {
+        "tags": [
+          "관리자/Stocks"
+        ],
+        "summary": "공모주 관리 - 공모주 상태변경",
         "description": "",
         "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -1149,12 +1293,19 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
     },
     "/getIpoDetail": {
       "get": {
+        "tags": [
+          "관리자/Stocks"
+        ],
+        "summary": "공모주 관리 - 공모주 상세 불러오기",
         "description": "",
         "parameters": [
           {
@@ -1172,8 +1323,17 @@
     },
     "/modifyIpoDetail": {
       "post": {
+        "tags": [
+          "관리자/Stocks"
+        ],
+        "summary": "공모주 관리 - 공모주 상세 수정하기",
         "description": "",
         "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -1274,14 +1434,26 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
     },
     "/loadIpo": {
       "post": {
+        "tags": [
+          "관리자/Stocks"
+        ],
+        "summary": "공모주 불러오기 - 공모주 업데이트 관련 로직",
         "description": "",
         "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -1301,6 +1473,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -1345,6 +1520,11 @@
         "description": "",
         "parameters": [
           {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
             "name": "body",
             "in": "body",
             "schema": {
@@ -1363,6 +1543,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -1418,6 +1601,11 @@
         "description": "",
         "parameters": [
           {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
             "name": "body",
             "in": "body",
             "schema": {
@@ -1445,6 +1633,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -1457,6 +1648,11 @@
         "summary": "사용자 메뉴 관리 - 순서변경 로직",
         "description": "",
         "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -1473,6 +1669,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -1527,6 +1726,11 @@
         "description": "",
         "parameters": [
           {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
             "name": "body",
             "in": "body",
             "schema": {
@@ -1548,6 +1752,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -1582,6 +1789,11 @@
         "description": "",
         "parameters": [
           {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
             "name": "body",
             "in": "body",
             "schema": {
@@ -1600,6 +1812,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
